--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.9.3",
-    "axios": "^0.21.4",
+    "@babel/runtime": "^7.15.4",
+    "@popperjs/core": "2.10.1",
+    "axios": "0.21.4",
     "bootstrap": "5.1.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "next",
-    "react-dom": "^17.0.2"
+    "react": "17.0.2",
+    "react-bootstrap": "2.0.0-beta.6",
+    "react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
